--- a/node_notes/back-rest-api/package.json
+++ b/node_notes/back-rest-api/package.json
@@ -2,6 +2,7 @@
   "name": "back-rest-api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,5 +10,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
