--- a/foodhub_backend/package.json
+++ b/foodhub_backend/package.json
@@ -19,6 +19,7 @@
     "express": "4.21.1",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.5",
+    "node-schedule": "2.1.1",
     "nodemailer": "6.9.16",
     "uuid": "11.0.3",
     "zod": "3.23.8"
